📝 Rename root div element's id from root to app

--- a/public/index.html
+++ b/public/index.html
@@ -35,10 +35,14 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap"
       rel="stylesheet"
     />
-    <style>html {background-color: #222}</style>
+    <style>
+      html {
+        background-color: #222;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="app"></div>
   </body>
 </html>
