--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,14 @@
     -->
     <title>Endangered Animals Info</title>
     <!-- fonts -->
+    <!-- Saira Extra Condensed -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Saira+Extra+Condensed:wght@700&display=swap"
       rel="stylesheet"
-      href="//db.onlinewebfonts.com/c/596b9b0742c4fb004a2adcaf9861a128?family=WWF"
     />
+    <!-- Open Sans -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
